// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`duplicate element on move when ALT is clicked > rectangle 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "fillStyle": "hachure",
  "frameId": null,
  "groupIds": [],
  "height": 50,
  "id": "id0_copy",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "seed": 1014066025,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 1,
  "type": "rectangle",
  "updated": 1,
  "version": 4,
  "versionNonce": 238820263,
  "width": 30,
  "x": 30,
  "y": 20,
}
`;

exports[`duplicate element on move when ALT is clicked > rectangle 2`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "fillStyle": "hachure",
  "frameId": null,
  "groupIds": [],
  "height": 50,
  "id": "id0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "seed": 1278240551,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 1,
  "type": "rectangle",
  "updated": 1,
  "version": 4,
  "versionNonce": 1604849351,
  "width": 30,
  "x": -10,
  "y": 60,
}
`;

exports[`move element > rectangle 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "fillStyle": "hachure",
  "frameId": null,
  "groupIds": [],
  "height": 50,
  "id": "id0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "seed": 1278240551,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 1,
  "type": "rectangle",
  "updated": 1,
  "version": 3,
  "versionNonce": 1150084233,
  "width": 30,
  "x": 0,
  "y": 40,
}
`;

exports[`move element > rectangles with binding arrow 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "id2",
      "type": "arrow",
    },
  ],
  "fillStyle": "hachure",
  "frameId": null,
  "groupIds": [],
  "height": 100,
  "id": "id0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "seed": 1278240551,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 1,
  "type": "rectangle",
  "updated": 1,
  "version": 3,
  "versionNonce": 81784553,
  "width": 100,
  "x": 0,
  "y": 0,
}
`;

exports[`move element > rectangles with binding arrow 2`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "id2",
      "type": "arrow",
    },
  ],
  "fillStyle": "hachure",
  "frameId": null,
  "groupIds": [],
  "height": 300,
  "id": "id1",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "seed": 2019559783,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 1,
  "type": "rectangle",
  "updated": 1,
  "version": 6,
  "versionNonce": 927333447,
  "width": 300,
  "x": 201,
  "y": 2,
}
`;

exports[`move element > rectangles with binding arrow 3`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "endArrowhead": null,
  "endBinding": {
    "elementId": "id1",
    "focus": -0.46666666666666673,
    "gap": 10,
  },
  "fillStyle": "hachure",
  "frameId": null,
  "groupIds": [],
  "height": 81.48231043525051,
  "id": "id2",
  "isDeleted": false,
  "lastCommittedPoint": null,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": [
    [
      0,
      0,
    ],
    [
      81,
      81.48231043525051,
    ],
  ],
  "roughness": 1,
  "roundness": {
    "type": 2,
  },
  "seed": 238820263,
  "startArrowhead": null,
  "startBinding": {
    "elementId": "id0",
    "focus": -0.6000000000000001,
    "gap": 10,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 1,
  "type": "line",
  "updated": 1,
  "version": 11,
  "versionNonce": 1051383431,
  "width": 81,
  "x": 110,
  "y": 49.981789081137734,
}
`;
